# opentelemetry-operations-python

./: .dockerignore  .flake8  .gitignore  .isort.cfg  .pylintrc  .readthedocs.yml  README.md  cloudbuild-e2e-cloud-functions-gen2.yaml  cloudbuild-e2e-cloud-run.yaml  cloudbuild-e2e-gae-standard.yaml  cloudbuild-e2e-gae.yaml  cloudbuild-e2e-gce.yaml  cloudbuild-e2e-gke.yaml  cloudbuild-e2e-image.yaml  cloudbuild-e2e-local.yaml  cloudbuild.yaml  dev-constraints.txt  docs-requirements.txt  everything.sh  get_mock_server.sh  release.py  reqs  tox.ini
opentelemetry-configurator-gcp/: .gitignore  Makefile  README.rst  pyproject.toml
opentelemetry-configurator-gcp/src/opentelemetry/configurator/gcp/: __init__.py  configurator.py  flags.py  gcloud_env.py  logs.py  metrics.py  resource.py  traces.py  version.py
opentelemetry-configurator-gcp/tests/: requirements.txt  run_with_autoinstrumentation.py  run_with_env.sh  test_automatic.py  test_automatic.sh  test_manual_all_enabled.py  test_manual_default_parameters.py  test_manual_logging_only.py  test_manual_metrics_only.py  test_manual_resource_off.py  test_manual_resource_on.py  test_manual_tracing_only.py
opentelemetry-configurator-gcp/tools/: build.sh  lint.sh  test.sh
opentelemetry-customizer/: MANIFEST.in  setup.cfg  setup.py
opentelemetry-customizer/src/opentelemetry/customizer/: __init__.py  version.py
opentelemetry-exporter-gcp-logging/: CHANGELOG.md  README.rst  mypy.ini  setup.cfg  setup.py
opentelemetry-exporter-gcp-logging/src/opentelemetry/exporter/cloud_logging/: __init__.py  version.py  (+1 more)
opentelemetry-exporter-gcp-logging/tests/: conftest.py  test_cloud_logging.py
opentelemetry-exporter-gcp-logging/tests/__snapshots__/test_cloud_logging/: test_agent_engine_monitored_resources[client].json  test_agent_engine_monitored_resources[structured_json].json  test_convert_gen_ai_body.json  test_convert_gen_ai_body[client].json  test_convert_gen_ai_body[structured_json].json  test_convert_non_json_dict_bytes.json  test_convert_non_json_dict_bytes[structured_json].json  test_convert_otlp.json  test_convert_otlp_dict_body.json  test_convert_otlp_dict_body[structured_json].json  test_convert_otlp_various_different_types_in_attrs_and_bytes_body.json  test_convert_otlp_various_different_types_in_attrs_and_bytes_body[structured_json].json  test_convert_various_types_of_attributes.json  test_convert_various_types_of_attributes[structured_json].json  test_convert_various_types_of_bodies[None].json  test_convert_various_types_of_bodies[bool].json  test_convert_various_types_of_bodies[client-bool].json  test_convert_various_types_of_bodies[client-list_of_bools].json  test_convert_various_types_of_bodies[client-list_of_dicts_with_bytes].json  test_convert_various_types_of_bodies[client-list_of_mixed_sequence].json  test_convert_various_types_of_bodies[str].json  test_convert_various_types_of_bodies[structured_json-None].json  test_convert_various_types_of_bodies[structured_json-bool].json  test_convert_various_types_of_bodies[structured_json-list_of_bools].json  test_convert_various_types_of_bodies[structured_json-list_of_dicts_with_bytes].json  test_convert_various_types_of_bodies[structured_json-list_of_mixed_sequence].json  test_convert_various_types_of_bodies[structured_json-str].json
opentelemetry-exporter-gcp-logging/tests/fixtures/: cloud_logging_fake.py  snapshot_logging_calls.py
opentelemetry-exporter-gcp-monitoring/: CHANGELOG.md  README.rst  mypy.ini  setup.cfg
opentelemetry-exporter-gcp-monitoring/tests/: conftest.py  metrictestutil.py  test_cloud_monitoring.py  test_cloud_monitoring_auto_instrument.py  test_cloud_monitoring_exporter_integration.py  test_normalize_label_key.py  test_resource.py  test_user_agent.py
opentelemetry-exporter-gcp-monitoring/tests/__snapshots__/: test_resource.ambr
opentelemetry-exporter-gcp-monitoring/tests/__snapshots__/test_cloud_monitoring/: test_counter[float].json  test_counter[int].json  test_exponential_histogram.json  test_histogram_default_buckets.json  test_histogram_single_bucket.json  test_invalid_label_keys.json  test_observable_counter[float].json  test_observable_counter[int].json  test_observable_gauge[float].json  test_observable_gauge[int].json  test_observable_updowncounter[float].json  test_observable_updowncounter[int].json  test_up_down_counter[float].json  test_up_down_counter[int].json  test_with_resource.json
opentelemetry-exporter-gcp-monitoring/tests/fixtures/: gcmfake.py  snapshot_gcmcalls.py
opentelemetry-exporter-gcp-trace/: CHANGELOG.md  README.rst  setup.cfg  setup.py
opentelemetry-exporter-gcp-trace/tests/: test_cloud_trace_auto_instrument.py  test_cloud_trace_exporter.py  test_integration_cloud_trace_exporter.py
opentelemetry-exporter-google-cloud/: CHANGELOG.md  README.rst  mypy.ini  setup.cfg  setup.py
opentelemetry-exporter-google-cloud/tests/: test_cloud_monitoring.py  test_cloud_monitoring_exporter_integration.py  test_cloud_trace_exporter.py  test_integration_cloud_trace_exporter.py
opentelemetry-gcp-auth-provider/: README.rst  setup.cfg  setup.py
opentelemetry-gcp-auth-provider/src/opentelemetry/gcp_auth_provider/: version.py
opentelemetry-gcp-auth-provider/tests/: test_credential_provider.py
opentelemetry-resourcedetector-gcp/: CHANGELOG.md  README.rst  mypy.ini  setup.cfg  setup.py
opentelemetry-resourcedetector-gcp/tests/: conftest.py  test_detector.py  test_faas.py  test_gae.py  test_gce.py  test_gcp_resource_detector.py  test_gke.py  test_mapping.py
opentelemetry-resourcedetector-gcp/tests/__snapshots__/: test_detector.ambr  test_mapping.ambr
opentelemetry-tools-google-cloud/: CHANGELOG.md  README.rst  mypy.ini  setup.cfg  setup.py
opentelemetry-tools-google-cloud/src/opentelemetry/tools/: cloud_trace_propagator.py  resource_detector.py
opentelemetry-tools-google-cloud/tests/: test_cloud_trace_propagator.py  test_gcp_resource_detector.py
samples/adk-sql-agent/: README.md  main.env  main.py  opentelemetry.env  pyproject.toml  requirements.txt
samples/adk-sql-agent/sql_agent/: .env  agent.py  tools.py
(+191 files in other folders)
