[metadata]
name = opentelemetry-gcp-customizer
description = Google Cloud Auto Instrumentation Customizer for OpenTelemetry
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Google
author_email = opentelemetry-pypi@google.com
url = https://github.com/GoogleCloudPlatform/opentelemetry-operations-python/tree/main/opentelemetry-exporter-gcp-logging
platforms = any
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
python_requires = >=3.7
package_dir=
    =src
packages=find_namespace:
install_requires =
    google-auth ~= 2.38
    grpcio ~= 1.7
    opentelemetry-sdk ~= 1.13
    opentelemetry-resourcedetector-gcp ~= 1.9.0a0

[options.packages.find]
where = src

[options.extras_require]
test =

[options.entry_points]
opentelemetry_customizer =
    send_logs_and_traces_to_gcp = opentelemetry.customizer:send_logs_and_traces_to_gcp
    send_metrics_and_traces_to_gcp = opentelemetry.customizer:send_metrics_and_traces_to_gcp
    send_logs_and_metrics_to_gcp = opentelemetry.customizer:send_logs_and_metrics_to_gcp
    send_only_traces_to_gcp = opentelemetry.customizer:send_only_traces_to_gcp
    send_only_metrics_to_gcp = opentelemetry.customizer:send_only_metrics_to_gcp
    send_only_logs_to_gcp = opentelemetry.customizer:send_only_logs_to_gcp
    send_all_telemetry_to_gcp = opentelemetry.customizer:send_all_telemetry_to_gcp
