[metadata]
name = opentelemetry-exporter-gcp-logging
description = Google Cloud Logging exporter for OpenTelemetry
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Google
author_email = opentelemetry-pypi@google.com
url = https://github.com/GoogleCloudPlatform/opentelemetry-operations-python/tree/main/opentelemetry-exporter-gcp-logging
platforms = any
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
python_requires = >=3.7
package_dir=
    =src
packages=find_namespace:
install_requires =
    google-cloud-logging ~= 3.0
    opentelemetry-sdk ~= 1.0
    opentelemetry-api ~= 1.2
    opentelemetry-resourcedetector-gcp >= 1.5.0dev0, == 1.*

[options.packages.find]
where = src

[options.extras_require]
test =

[options.entry_points]
opentelemetry_logs_exporter =
    gcp_logging = opentelemetry.exporter.cloud_logging:CloudLoggingExporter
opentelemetry_environment_variables =
    gcp_logging = opentelemetry.exporter.cloud_logging.environment_variables
