[metadata]
name = opentelemetry-exporter-gcp-monitoring
description = Google Cloud Monitoring exporter for OpenTelemetry
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Google
author_email = opentelemetry-pypi@google.com
url = https://github.com/GoogleCloudPlatform/opentelemetry-operations-python/tree/main/opentelemetry-exporter-gcp-monitoring
platforms = any
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.7
package_dir=
    =src
packages=find_namespace:
install_requires =
    google-cloud-monitoring ~= 2.0
    opentelemetry-api ~= 1.0
    opentelemetry-sdk ~= 1.0

[options.packages.find]
where = src

[options.extras_require]
test =
