[metadata]
name = opentelemetry-exporter-gcp-trace
description = Google Cloud Trace exporter for OpenTelemetry
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Google
author_email = opentelemetry-pypi@google.com
url = https://github.com/GoogleCloudPlatform/opentelemetry-operations-python/tree/master/opentelemetry-exporter-gcp-trace
platforms = any
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.5
package_dir=
    =src
packages=find_namespace:
install_requires =
    google-cloud-trace >=0.24.0, <1.0.0
    opentelemetry-api ~= 0.17b0
    opentelemetry-sdk ~= 0.17b0

[options.packages.find]
where = src

[options.extras_require]
test =
