[metadata]
name = opentelemetry-exporter-gcp-auth-provider
description = Google Cloud Platform authentication provider
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Google
author_email = opentelemetry-pypi@google.com
url = https://github.com/GoogleCloudPlatform/opentelemetry-operations-python/tree/main/opentelemetry-gcp-auth-provider
platforms = any
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
python_requires = >=3.9
package_dir=
    =src
packages=find_namespace:
install_requires =
    requests ~= 2.3
    google-auth ~= 2.4
    grpcio ~= 1.7
    opentelemetry-exporter-otlp-proto-grpc >= 1.37
    opentelemetry-exporter-otlp-proto-http >= 1.37

[options.packages.find]
where = src

[options.entry_points]
opentelemetry_otlp_credential_provider =
    gcp_grpc_credentials = opentelemetry.gcp_auth_provider:create_google_grpc_credentials
    gcp_http_credentials = opentelemetry.gcp_auth_provider:create_google_authorized_session
