[metadata]
name = opentelemetry-tools-google-cloud
description = Google Cloud propagator and resource detector for OpenTelemetry
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Google
author_email = opentelemetry-pypi@google.com
url = https://github.com/GoogleCloudPlatform/opentelemetry-operations-python/tree/master/opentelemetry-tools-google-cloud
platforms = any
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.5
package_dir=
    =src
packages=find_namespace:
install_requires =
    google-auth~=1.22
    opentelemetry-api
    opentelemetry-sdk
    requests~=2.24

[options.packages.find]
where = src

[options.extras_require]
test =
